--- a/tutorial/backoffice-3-0.html
+++ b/tutorial/backoffice-3-0.html
@@ -254,8 +254,11 @@
   <li>+55 4002-9700 – Capitais e Regiões Metropolitanas</li>
   <li>+55 0800-570-1700 – Demais Localidades</li>
   <li>+55 11 2860-1348 – Internacionais
- — Opção 1 – Suporte técnico;
- — Opção 2 – Credenciamento eCommerce.</li>
+    <ul>
+      <li>Opção 1 – Suporte técnico;</li>
+      <li>Opção 2 – Credenciamento eCommerce.</li>
+    </ul>
+  </li>
   <li>Email: cieloeCommerce@cielo.com.br</li>
 </ul>
 
