--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -200,11 +200,8 @@ O número de coleções é ilimitado, ou seja, você pode criar várias coleçõ
 <p>3 - Pronto,  agora os endereços e credenciais para teste já estão cadastrada. Sugerimos que você crie um ambiente para Produção e um para Sandbox assim,</p>
 
 <blockquote>
-  <p>Na <strong>API Cielo Ecommerce</strong> as credenciais, <code class="highlighter-rouge">MerchantID</code> e <code class="highlighter-rouge">MerchantKey</code>, devem coincindir com o ambiente das URLs, ou seja, Credenciais de sandbox funcionam apenas com URLs de Sandbox</p>
-</blockquote>
-
-<blockquote>
-  <p>No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">MerchantKey</code> nem diferença entre Sandbox e produção. Para realizar testes, deve ser ativado o <strong>“Modo de Teste”</strong>. Para mais informações sobre o Modo de teste, acesso o <a href="https://developercielo.github.io/Checkout-Backoffice/">Tutorial do backoffice</a></p>
+  <p>Na <strong>API Cielo Ecommerce</strong> as credenciais, <code class="highlighter-rouge">MerchantID</code> e <code class="highlighter-rouge">MerchantKey</code>, devem coincindir com o ambiente das URLs, ou seja, Credenciais de sandbox funcionam apenas com URLs de Sandbox
+No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">MerchantKey</code> nem diferença entre Sandbox e produção. Para realizar testes, deve ser ativado o <strong>“Modo de Teste”</strong>. Para mais informações sobre o Modo de teste, acesso o <a href="https://developercielo.github.io/Checkout-Backoffice/">Tutorial do backoffice</a></p>
 </blockquote>
 
 <h2 id="importando-uma-collection">Importando uma Collection</h2>
@@ -214,13 +211,9 @@ O número de coleções é ilimitado, ou seja, você pode criar várias coleçõ
 <p>Para realizar a importação basta:</p>
 
 <ol>
-  <li>
-    <p>Acessar a área do manual onde o link da Coleção está disponível e copia-lo
-     a. IMPORTANTE: para que a sua coleção sempre esteja atualizada, sugerimos que sempre busque a ultima versão da coleção no manual. O link NÃO ATUALIZA A COLEÇÃO IMPORTADA AUTOMATICAMENTE</p>
-  </li>
-  <li>
-    <p>Com o Postman aberto, use o botão IMPORT, e selecione a opção “IMPORT FROM LINK”.</p>
-  </li>
+  <li>Acessar a área do manual onde o link da Coleção está disponível e copia-lo
+  a. IMPORTANTE: para que a sua coleção sempre esteja atualizada, sugerimos que sempre busque a ultima versão da coleção no manual. O link NÃO ATUALIZA A COLEÇÃO IMPORTADA AUTOMATICAMENTE</li>
+  <li>Com o Postman aberto, use o botão IMPORT, e selecione a opção “IMPORT FROM LINK”.</li>
 </ol>
 
 <p><img src="/images/p5.png" alt="" /></p>
@@ -263,7 +256,7 @@ O número de coleções é ilimitado, ou seja, você pode criar várias coleçõ
 <h3 id="checkout-cielo">Checkout Cielo</h3>
 
 <ul>
-  <li><strong>Collection</strong>   -  <a href="https://www.getpostman.com/collections/97969ec643738aac42f4">https://www.getpostman.com/collections/97969ec643738aac42f4</a></li>
+  <li><strong>Collection</strong>  -  <a href="https://www.getpostman.com/collections/97969ec643738aac42f4">https://www.getpostman.com/collections/97969ec643738aac42f4</a></li>
 </ul>
 
 <table>
@@ -292,8 +285,8 @@ O número de coleções é ilimitado, ou seja, você pode criar várias coleçõ
   <li>Verifique que o Environment correto está selecionado</li>
   <li>Clique em SEND.</li>
   <li>Na parte inferior você verá 2 informações:
- a. O Body do Response - Aqui é onde ficam listadas os dados retornados de suas transações
- b. O HTTP Status - Aqui você verifica se a sua requisição funcionou.</li>
+  a. O Body do Response - Aqui é onde ficam listadas os dados retornados de suas transações
+  b. O HTTP Status - Aqui você verifica se a sua requisição funcionou.</li>
 </ol>
 
 <p><strong>OBS</strong>:Se você não receber um response verifique o status HTTP.</p>
