--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -120,7 +120,7 @@
 
 <p>1.Acesse a Chrome Store, pesquise por POSTMAN  em APPs</p>
 
-<p><img src="/images/p1.png" alt="" /></p>
+<p><img src="/images/TutorialPostman/p1.png" alt="" /></p>
 
 <p>2.Na aba de Apps no seu Google Chrome acesse o ícone do Postman</p>
 
