--- a/manual/api-cielo-ecommerce.html
+++ b/manual/api-cielo-ecommerce.html
@@ -641,6 +641,10 @@ Abaixo especificamos qualquer diferença existente:</p>
 
 <p>Para criar uma transação que utilizará cartão de crédito, é necessário enviar uma requisição utilizando o método <code class="highlighter-rouge">POST</code> para o recurso Payment, conforme o exemplo. Esse exemplo contempla o mínimo de campos necessários a serem enviados para a autorização.</p>
 
+<blockquote>
+  <p><strong>Teste de destaque de informações:</strong> TesteTesteTesteTesteTesteTesteTesteTesteTeste</p>
+</blockquote>
+
 <aside class="notice"><strong>Atenção:</strong> Não é possivel realizar uma transação com valor (`Amount`) 0.</aside>
 
 <h3 id="requisição">Requisição</h3>
