--- a/manual/api-cielo-ecommerce.html
+++ b/manual/api-cielo-ecommerce.html
@@ -645,7 +645,15 @@ Abaixo especificamos qualquer diferença existente:</p>
   <p><strong>Teste de destaque de informações:</strong> TesteTesteTesteTesteTesteTesteTesteTesteTeste</p>
 </blockquote>
 
-<aside class="notice"><strong>Atenção:</strong> Não é possivel realizar uma transação com valor (`Amount`) 0.</aside>
+<aside class="request"><span class="method GET">GET</span> <span class="endpoint">/1/GET/</span></aside>
+
+<aside class="request"><span class="method PUT">PUT</span> <span class="endpoint">/1/PUT/</span></aside>
+
+<aside class="request"><span class="method POST">POST</span> <span class="endpoint">/1/POST/</span></aside>
+
+<aside class="notice"><strong>Atenção:</strong> Não é **possivel** realizar uma transação com valor (`Amount`) 0.</aside>
+
+<aside class="warning">Warning</aside>
 
 <h3 id="requisição">Requisição</h3>
 
