--- a/manual/api-cielo-ecommerce.html
+++ b/manual/api-cielo-ecommerce.html
@@ -469,9 +469,9 @@
 <p>Em caso de dúvidas em qualquer etapa ou outras informações técnicas, entre em contato com o Suporte Web do Cielo e-Commerce nos seguintes canais:</p>
 
 <ul>
-  <li><strong>Email:</strong> <a href="mailto:cieloeCommerce@cielo.com.br">cieloeCommerce@cielo.com.br</a></li>
-  <li><strong>Capitais:</strong> 4002-9700</li>
-  <li><strong>Demais Cidades:</strong> 0800 570 1700</li>
+  <li>Email: <a href="mailto:cieloeCommerce@cielo.com.br">cieloeCommerce@cielo.com.br</a></li>
+  <li>Capitais: 4002-9700</li>
+  <li>Demais Cidades: 0800 570 1700</li>
 </ul>
 
 <p>Horário de atendimento: 24h por dia, 7 dias por semana.</p>
