--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -327,7 +327,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <ol>
   <li>
-    <p>O cadastro da loja deve estar <strong>ativo</strong> junto à Cielo, possuindo ao menus um tipo de <strong>PLANO de pagamento</strong> atrelado a conta.</p>
+    <p>O cadastro da loja deve estar <strong>ativo</strong> junto à Cielo, possuindo ao menos um tipo de <strong>PLANO de pagamento</strong> atrelado a conta.</p>
   </li>
   <li>
     <p>Deve-se definir um <strong>timeout</strong> adequado nas requisições HTTP à Cielo; recomendamos 30 segundos.</p>
