--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -116,7 +116,7 @@
 <p>O <strong>Checkout Cielo</strong> é uma solução que agrega vários serviços de processamento de pagamento, no qual o consumidor é direcionado para uma página de pagamento online segura da Cielo.
 A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo as normas de segurança PCI.</p>
 
-<p>O grande diferencial do Checkout Cielo é a gama de serviços agregados em uma tela transacional segura e com apenas uma integração técnica via API REST.</p>
+<p>O grande diferencial do Checkout Cielo é a gama de serviços agregados em uma tela transacional segura e com apenas uma integração técnica via <strong>API REST</strong>.</p>
 
 <p>O Checkout possui as seguintes Funcionalidades:</p>
 
